--- a/prob1_2024/fluc.html
+++ b/prob1_2024/fluc.html
@@ -291,7 +291,7 @@ $$
 N_{n,x} = \binom{n}{\frac{n+x}{2}}.
 $$
 This is $0$ if $\frac{n+x}{2}$ is
-outside $\{0,1,...,n\}.$ Also, note the trivial case
+outside $\{0,1,...,n\}.$
 </fieldset>
 
 <p></p>
@@ -733,7 +733,7 @@ Find the number of paths from (0,0) to (11,1) that meet 4 (may or may not cross 
 Next find similarly 
 the number of paths from (0,0) to (11,1) that meet 5 (may or may not cross it). The answer is $N_{11,9}.$
 <p></p>
-The difference should give your the answer: $N_{11,7}-N_{11,9}.$
+The difference should give you the answer: $N_{11,7}-N_{11,9}.$
   ■
 </p>
 
