--- a/prob1_2024/fluc.html
+++ b/prob1_2024/fluc.html
@@ -1069,7 +1069,7 @@ Similarly
 Combining these two we get
  $$|A_{2n,2k}| =  \sum_{r=1}^k |B_{2r,2r}|\times |A_{2n-2r,2k-2r}|+ \sum_{r=1}^{n-k}|C_{2r,2r}|\times |A_{2n-2r,2k}|.$$
 Notice that $|B_{2r,2r}|$  and $|C_{2r,2r}|$  are the same, and each is equal to
- $\frac 12|Z_r|,$  where $Z_{2r} = $  number of $2r$-length paths with first 0-return
+ $\frac 12|Z_{2r}|,$  where $Z_{2r} = $  number of $2r$-length paths with first 0-return
  at $2r.$  Thus, we get our <font color="#ff0000">master equality</font>:
  $$|A_{2n,2k}| = \frac 12 \sum_{r=1}^k |Z_{2r}|\times |A_{2n-2r,2k-2r}|+ \frac 12\sum_{r=1}^{n-k}|Z_{2r}|\times |A_{2n-2r,2k}|.$$
 Since $|Z_{2r}|$  is already known from the <b>first 0-return theorem</b>,
