--- a/prob1_2024/fluc.html
+++ b/prob1_2024/fluc.html
@@ -996,7 +996,8 @@ $$\forall n\in{\mathbb N}~~\forall k\in\{0,...,n\}~~|A_{2n,2k}|=N_{2k,0}\times N
 We shall show the case for $k=n.$  The $k=0$  is similar. 
 Note that $k=n$ means the path is always above the $x$-axis (though it may touch the
  axis). We shall convert it bijectively into a $(2n+1)$-length  path not returning to 0. This conversion is done by
- shifting the path 1 unit upwards and to the right, and joining $(0,0)$  with $(1,1).$  
+ shifting the path 1 unit upwards and to the right, and joining $(0,0)$  with $(1,1).$  Click on the figure below
+ to see the conversion as an animation.
 <center>
 <video onclick="this.play()">
 <source type="video/webm" src="image/anim.webm"></source>
